Rearrange shader files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,6 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
 set(CMAKE_CXX_STANDARD 11)
 
-# configure a header file to pass some of the CMake settings
-# to the source code.
-configure_file (
-        "${PROJECT_SOURCE_DIR}/config.h.in"
-        "${PROJECT_SOURCE_DIR}/config.h"
-)
-
 # Add necessary include directories
 list(APPEND INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include)
 
@@ -51,3 +44,6 @@ target_link_libraries(HorizonalMovingTriangle glfw ${OPENGL_gl_LIBRARY})
 
 add_executable(VertexDataColoredTriangle VertexDataColoredTriangle.cpp Shader.cpp glad.c)
 target_link_libraries(VertexDataColoredTriangle glfw ${OPENGL_gl_LIBRARY})
+
+add_executable(TexturedTriangle TexturedTriangle.cpp Shader.cpp glad.c)
+target_link_libraries(TexturedTriangle glfw ${OPENGL_gl_LIBRARY})
