--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,48 +2,45 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
 set(CMAKE_CXX_STANDARD 11)
 
-# Add necessary include directories
-list(APPEND INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include)
-
-# Add necessary library directories
 find_package(OpenGL REQUIRED)
 
-include_directories(${PROJECT_SOURCE_DIR})
+include_directories(${PROJECT_SOURCE_DIR}/include)
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/glfw-3.2.1)
 
-add_executable(glfwtest glfwtest.cpp glad.c)
+add_executable(glfwtest src/GettingStarted/glfwtest.cpp src/glad.c)
 target_link_libraries(glfwtest glfw ${OPENGL_gl_LIBRARY})
 
-add_executable(triangle triangle.cpp glad.c Shader.cpp)
+add_executable(triangle src/GettingStarted/triangle.cpp src/glad.c src/Shader.cpp)
 target_link_libraries(triangle glfw ${OPENGL_gl_LIBRARY})
 
-add_executable(rectangle rectangle.cpp glad.c)
+add_executable(rectangle src/GettingStarted/rectangle.cpp src/glad.c)
 target_link_libraries(rectangle glfw ${OPENGL_gl_LIBRARY})
 
-add_executable(2triangles1VBO 2triangles1VBO.cpp glad.c)
+add_executable(2triangles1VBO src/GettingStarted/2triangles1VBO.cpp src/glad.c)
 target_link_libraries(2triangles1VBO glfw ${OPENGL_gl_LIBRARY})
 
-add_executable(2triangles2VBOs 2triangles2VBOs.cpp glad.c)
+add_executable(2triangles2VBOs src/GettingStarted/2triangles2VBOs.cpp src/glad.c)
 target_link_libraries(2triangles2VBOs glfw ${OPENGL_gl_LIBRARY})
 
-add_executable(2difftriangles 2difftriangles.cpp glad.c)
+add_executable(2difftriangles src/GettingStarted/2difftriangles.cpp src/glad.c)
 target_link_libraries(2difftriangles glfw ${OPENGL_gl_LIBRARY})
 
-add_executable(useshader useshader.cpp glad.c)
+add_executable(useshader src/GettingStarted/useshader.cpp src/glad.c)
 target_link_libraries(useshader glfw ${OPENGL_gl_LIBRARY})
 
-add_executable(vertexcolor vertexcolor.cpp glad.c)
+add_executable(vertexcolor src/GettingStarted/vertexcolor.cpp src/glad.c)
 target_link_libraries(vertexcolor glfw ${OPENGL_gl_LIBRARY})
 
-add_executable(UpsideDownTriangle UpsideDownTriangle.cpp Shader.cpp glad.c)
+add_executable(UpsideDownTriangle src/GettingStarted/UpsideDownTriangle.cpp src/Shader.cpp src/glad.c)
 target_link_libraries(UpsideDownTriangle glfw ${OPENGL_gl_LIBRARY})
 
-add_executable(HorizonalMovingTriangle HorizonalMovingTriangle.cpp Shader.cpp glad.c)
+add_executable(HorizonalMovingTriangle src/GettingStarted/HorizonalMovingTriangle.cpp src/Shader.cpp src/glad.c)
 target_link_libraries(HorizonalMovingTriangle glfw ${OPENGL_gl_LIBRARY})
 
-add_executable(VertexDataColoredTriangle VertexDataColoredTriangle.cpp Shader.cpp glad.c)
+add_executable(VertexDataColoredTriangle src/GettingStarted/VertexDataColoredTriangle.cpp src/Shader.cpp src/glad.c)
 target_link_libraries(VertexDataColoredTriangle glfw ${OPENGL_gl_LIBRARY})
 
-add_executable(TexturedTriangle TexturedTriangle.cpp Shader.cpp glad.c)
+add_executable(TexturedTriangle src/GettingStarted/TexturedTriangle.cpp src/Shader.cpp src/glad.c)
 target_link_libraries(TexturedTriangle glfw ${OPENGL_gl_LIBRARY})
+
