--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,4 +88,7 @@ target_link_libraries(PhongInViewSpace glfw ${OPENGL_gl_LIBRARY})
 
 add_executable(Gouraud src/Lighting/Gouraud.cpp src/glad.c)
 target_link_libraries(Gouraud glfw ${OPENGL_gl_LIBRARY})
+
+add_executable(Material src/Lighting/Material.cpp src/glad.c)
+target_link_libraries(Material glfw ${OPENGL_gl_LIBRARY})
 ##################################################
