--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,4 +91,7 @@ target_link_libraries(Gouraud glfw ${OPENGL_gl_LIBRARY})
 
 add_executable(Material src/Lighting/Material.cpp src/glad.c)
 target_link_libraries(Material glfw ${OPENGL_gl_LIBRARY})
+
+add_executable(LightingMaps src/Lighting/LightingMaps.cpp src/glad.c)
+target_link_libraries(LightingMaps glfw ${OPENGL_gl_LIBRARY})
 ##################################################
