--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,4 +117,7 @@ target_link_libraries(nanosuit glfw ${OPENGL_gl_LIBRARY} assimp)
 ################ Advanced OpenGL #################
 add_executable(ObjectOutlining src/AdvancedOpenGL/ObjectOutlining.cpp src/glad.c)
 target_link_libraries(ObjectOutlining glfw ${OPENGL_gl_LIBRARY} assimp)
+
+add_executable(Blending src/AdvancedOpenGL/Blending.cpp src/glad.c)
+target_link_libraries(Blending glfw ${OPENGL_gl_LIBRARY} assimp)
 ##################################################
