--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,7 @@ target_link_libraries(nanosuit glfw ${OPENGL_gl_LIBRARY} assimp)
 add_executable(ObjectOutlining src/AdvancedOpenGL/ObjectOutlining.cpp src/glad.c)
 target_link_libraries(ObjectOutlining glfw ${OPENGL_gl_LIBRARY} assimp)
 
-add_executable(Blending src/AdvancedOpenGL/Blending.cpp src/glad.c)
+add_executable(Blending src/AdvancedOpenGL/Blending.cpp src/glad.c src/AdvancedOpenGL/Explosion.cpp)
 target_link_libraries(Blending glfw ${OPENGL_gl_LIBRARY} assimp)
 
 add_executable(PostProcessing-Inversion src/AdvancedOpenGL/PostProcessing-Inversion.cpp src/glad.c)
@@ -156,4 +156,7 @@ target_link_libraries(DynamicEnvironmentMap glfw ${OPENGL_gl_LIBRARY} assimp)
 
 add_executable(GeometryShader src/AdvancedOpenGL/GeometryShader.cpp src/glad.c)
 target_link_libraries(GeometryShader glfw ${OPENGL_gl_LIBRARY} assimp)
+
+add_executable(Explosion src/AdvancedOpenGL/Explosion.cpp src/glad.c)
+target_link_libraries(Explosion glfw ${OPENGL_gl_LIBRARY} assimp)
 ##################################################
