--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,7 @@ target_link_libraries(nanosuit glfw ${OPENGL_gl_LIBRARY} assimp)
 add_executable(ObjectOutlining src/AdvancedOpenGL/ObjectOutlining.cpp src/glad.c)
 target_link_libraries(ObjectOutlining glfw ${OPENGL_gl_LIBRARY} assimp)
 
-add_executable(Blending src/AdvancedOpenGL/Blending.cpp src/glad.c src/AdvancedOpenGL/Explosion.cpp src/AdvancedOpenGL/NormalVisualizing.cpp)
+add_executable(Blending src/AdvancedOpenGL/Blending.cpp src/glad.c)
 target_link_libraries(Blending glfw ${OPENGL_gl_LIBRARY} assimp)
 
 add_executable(PostProcessing-Inversion src/AdvancedOpenGL/PostProcessing-Inversion.cpp src/glad.c)
@@ -162,4 +162,7 @@ target_link_libraries(Explosion glfw ${OPENGL_gl_LIBRARY} assimp)
 
 add_executable(NormalVisualing src/AdvancedOpenGL/NormalVisualizing.cpp src/glad.c)
 target_link_libraries(NormalVisualing glfw ${OPENGL_gl_LIBRARY} assimp)
+
+add_executable(Instancing src/AdvancedOpenGL/Instancing.cpp src/glad.c)
+target_link_libraries(Instancing glfw ${OPENGL_gl_LIBRARY})
 ##################################################
